--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -881,7 +881,9 @@ button,
 
     &.one {
       background-color: #81918e;
-      background-image: linear-gradient(rgba(128, 131, 129, 0.8)),
+      background-image: linear-gradient(to right bottom,
+          rgba(162, 168, 164, 0.8),
+          rgba(90, 177, 199, 0.8)),
         url('../images/dog-ocean.jpg');
       background-size: cover;
       background-position: top;
