banner overlay main.scss

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -881,7 +881,7 @@ button,
 
     &.one {
       background-color: #81918e;
-      background-image: linear-gradient(rgba(128, 131, 129, 0.8)),
+      background-image: linear-gradient(to bottom right, #bec0c2c7, #17405ec0),
         url('../images/dog-ocean.jpg');
       background-size: cover;
       background-position: top;
