--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -7,6 +7,8 @@
 @import url('font-awesome.min.css');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,600');
 
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC:700&display=swap');
+
 /*
 	Prologue by HTML5 UP
 	html5up.net | @ajlkn
@@ -272,7 +274,10 @@ h2 {
     animation-name: moveInLeft;
     animation-duration: 2s;
     animation-timing-function: ease-out;
-    font-weight: 500;
+    font-weight: 700;
+    font-family: 'Amatic SC', cursive;
+    font-size: 3em;
+    letter-spacing: 1px;
     white-space: pre-line;
 
 
