--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -17,22 +17,30 @@
 
 // Breakpoints.
 
-@include breakpoints((wide: (961px,
+@include breakpoints(
+  (
+    wide: (
+      961px,
       1880px,
     ),
-    normal: (961px,
+    normal: (
+      961px,
       1620px,
     ),
-    narrow: (961px,
+    narrow: (
+      961px,
       1320px,
     ),
-    narrower: (737px,
+    narrower: (
+      737px,
       960px,
     ),
-    mobile: (null,
+    mobile: (
+      null,
       736px,
     ),
-  ));
+  )
+);
 
 // Reset.
 // Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
@@ -212,7 +220,6 @@ body {
 
   // Stops initial animations until page loads.
   &.is-preload {
-
     *,
     *:before,
     *:after {
@@ -261,7 +268,6 @@ h2 {
   font-size: 2em;
   letter-spacing: -1px;
 
-
   .heading-primary-main {
     color: white !important;
   }
@@ -280,11 +286,9 @@ h2 {
     letter-spacing: 1px;
     white-space: pre-line;
 
-
     strong {
       font-size: larger;
       color: #666;
-
     }
   }
 }
@@ -296,7 +300,7 @@ h3 {
 header {
   margin: 0 0 2em 0;
 
-  >p {
+  > p {
     margin: 1em 0 0 0;
   }
 }
@@ -320,8 +324,10 @@ a {
   text-decoration: none;
   color: inherit;
   border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
-  @include vendor('transition',
-    ('color 0.35s ease-in-out', 'border-bottom-color 0.35s ease-in-out'));
+  @include vendor(
+    'transition',
+    ('color 0.35s ease-in-out', 'border-bottom-color 0.35s ease-in-out')
+  );
   outline: 0;
 
   &:hover {
@@ -426,23 +432,44 @@ article {
   // margin-bottom: 3em;
 
   > :last-child,
-  >.container,
+  > .container,
   &:last-child {
     margin-bottom: 1;
   }
 
-  .row>& {
+  .row > & {
     margin-bottom: 0;
   }
 }
 
 /* Image */
+.photo-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  background-color: dodgerblue;
+
+  .card {
+    background-color: #f1f1f1;
+    width: 180px;
+    height: 190px;
+    margin: 10px 0;
+    text-align: center;
+    line-height: 75px;
+    font-size: 30px;
+
+    .image {
+      height: 190px !important;
+      width: 180px !important;
+    }
+  }
+}
 
 .image {
   display: inline-block;
   border: 0;
 
-  img {
+  .default-img {
     display: block;
     width: 100%;
   }
@@ -451,10 +478,10 @@ article {
     width: 48px;
     height: 48px;
 
-    img {
-      width: 48px;
-      height: 48px;
-    }
+    // img {
+    //   width: 48px;
+    //   height: 48px;
+    // }
   }
 
   &.fit {
@@ -477,7 +504,7 @@ article {
     display: block;
     margin: 0 0 2em 0;
 
-    img {
+    .default-img {
       margin: 0 auto;
       width: auto;
     }
@@ -643,10 +670,13 @@ button,
   background-color: #8ebebc;
   border: 0;
   cursor: pointer;
-  @include vendor('background-image',
-    ('linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))',
+  @include vendor(
+    'background-image',
+    (
+      'linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.15))',
       'url("../images/overlay.png")'
-    ));
+    )
+  );
   @include vendor('transition', 'background-color 0.35s ease-in-out');
 
   &:hover {
@@ -693,7 +723,7 @@ button,
     -moz-osx-font-smoothing: grayscale;
   }
 
-  >.label {
+  > .label {
     display: none;
   }
 }
@@ -858,7 +888,7 @@ button,
 #main {
   margin-left: 375px;
 
-  >section {
+  > section {
     margin: 0;
     overflow: hidden;
     padding: 4em 0;
@@ -959,7 +989,7 @@ button,
   /* Main */
 
   #main {
-    >section {
+    > section {
       padding: 3em 0;
     }
 
@@ -1002,7 +1032,6 @@ button,
   .item {
     // margin-bottom: 20px;
     border-radius: 33px;
-
   }
 
   /* Header */
@@ -1221,7 +1250,7 @@ button,
     padding-bottom: 1px;
     margin-left: 0;
 
-    >section {
+    > section {
       padding: 3em 0;
     }
 
@@ -1267,7 +1296,7 @@ button,
   /* Main */
 
   #main {
-    >section {
+    > section {
       padding: 2em 0;
     }
 
@@ -1312,8 +1341,6 @@ button,
   animation: bounce 2s infinite;
 }
 
-
-
 .heading-primary-sub {
   color: white !important;
   font-weight: 700;
@@ -1322,7 +1349,7 @@ button,
   animation-timing-function: ease-out;
 }
 
-// animations 
+// animations
 
 @keyframes moveInLeft {
   0% {
@@ -1363,7 +1390,6 @@ button,
 }
 
 @keyframes bounce {
-
   0%,
   20%,
   50%,
@@ -1379,4 +1405,50 @@ button,
   60% {
     transform: translateY(-15px);
   }
+}
+
+// IMAGE GRID STYLES
+.img-grid {
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 40px;
+}
+
+.img-wrap {
+  overflow: hidden;
+  height: 0;
+  padding: 50% 0;
+  /* padding controls height, will always be perfectly square regardless of width */
+  position: relative;
+  opacity: 0.8;
+}
+
+.img-wrap img {
+  min-width: 100%;
+  min-height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+// MODAL STYLES
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.backdrop img {
+  display: block;
+  max-width: 70%;
+  max-height: 90%;
+  margin: 60px auto;
+  box-shadow: 3px, 5px, 7px, rgba(0, 0, 0, 0.5);
+  border: 3px solid white;
 }
